# wealthNavigator

./: .coverage  .gitignore  ACCOUNT-FORM-USAGE.md  ADVANCED-PORTFOLIO-COMPLETE.md  ADVANCED-PORTFOLIO-FEATURES.md  ADVANCED-PORTFOLIO-INTEGRATION-COMPLETE.md  AGENT-SYSTEM-COMPLETE.md  AGENTS.md  API_DATABASE_INTEGRATION_SUMMARY.md  BACKEND-INTEGRATION-COMPLETE.md  BUDGET-AI-ENHANCEMENT-GUIDE.md  BUDGET-INTEGRATION-COMPLETE.md  BUDGET-TRACKING-COMPLETE.md  CI-CD-PIPELINE-COMPLETE.md  CI-CD-QUICK-START.md  CLAUDE.md  CRITICAL_INFRASTRUCTURE_SUMMARY.md  CSV-IMPORT-EXPORT-GUIDE.md  CUSTOM_REPORTS_IMPLEMENTATION.md  DATA-ENTRY-COMPLETE.md  DATA-INPUT-FEATURES-STATUS.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_PLAN.md  E2E-TEST-REPORT.md  ESTATE_PLANNING_INTEGRATION_COMPLETE.md  FINAL-STATUS.md  FORMS-COMPLETION-SUMMARY.md  FORMS-IMPLEMENTATION-GUIDE.md  FRONTEND-BACKEND-INTEGRATION.md  FRONTEND-UI-COMPLETE.md  HEDGING_INTEGRATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPORT-EXPORT-GUIDE.md  INSURANCE_OPTIMIZATION_INTEGRATION_COMPLETE.md  INTEGRATION-COMPLETE.md  MOCK_DATA_FIX_SUMMARY.md  NET_WORTH_ENHANCEMENTS_SUMMARY.md  NET_WORTH_QUICKSTART.md  NEXT_STEPS_COMPLETE.md  (+62 more)
backend/: .coverage  .dockerignore  .env.example  BACKEND-TEST-SUMMARY.md  CSV-INTEGRATION-SUMMARY.md  Dockerfile  NOTIFICATION_API_DOCUMENTATION.md  PHASE4-IMPLEMENTATION-PLAN.md  PLAID_INTEGRATION_SETUP.md  PLAID_PRODUCTION_CHECKLIST.md  PORTFOLIO_OPTIMIZATION_API_DOCUMENTATION.md  RISK_MANAGEMENT_API_DOCUMENTATION.md  SECTION_3.4_AI_EXPLANATIONS_TESTS_COMPLETE.md  alembic.ini  (+16 more)
(+654 files in other folders)
